--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -26,33 +26,31 @@
         </div>
 
         <div class="form-group">
-            <label th:for="location">Employer</label>
+            <label th:for="location">Location</label>
             <select th:field="*{location}">
                 <option th:each="location : *{locations}"
-                        th:value="${location.id}"
-                        th:text="${location.value}"></option>
+                        th:value="${location}"
+                        th:text="${location}"></option>
             </select>
         </div>
 
         <div class="form-group">
-            <label th:for="coreCompetency">Employer</label>
+            <label th:for="coreCompetency">Skill</label>
             <select th:field="*{coreCompetency}">
                 <option th:each="coreCompetency : *{coreCompetencies}"
-                        th:value="${coreCompetency.id}"
-                        th:text="${coreCompetency.value}"></option>
+                        th:value="${coreCompetency}"
+                        th:text="${coreCompetency}"></option>
             </select>
         </div>
 
         <div class="form-group">
-            <label th:for="positionType">Employer</label>
+            <label th:for="positionType">Position Type</label>
             <select th:field="*{positionType}">
                 <option th:each="positionType : *{positionTypes}"
-                        th:value="${positionType.id}"
-                        th:text="${positionType.value}"></option>
+                        th:value="${positionType}"
+                        th:text="${positionType}"></option>
             </select>
         </div>
-
-        <!-- TODO #5 - Create <select> dropdowns for other job fields -->
 
         <input type="submit" value="Add Job" />
     </form>
