--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -12,13 +12,13 @@
 
         <div class="form-group">
             <label th:for="name">Name</label>
-            <input th:field="*{name}" />
+            <input class="form-control" th:field="*{name}" />
             <div th:errors="*{name}"></div>
         </div>
 
         <div class="form-group">
             <label th:for="employerId">Employer</label>
-            <select th:field="*{employerId}">
+            <select class="form-control" th:field="*{employerId}">
                 <option th:each="employer : *{employers}"
                         th:value="${employer.id}"
                         th:text="${employer.value}"></option>
@@ -27,7 +27,7 @@
 
         <div class="form-group">
             <label th:for="location">Location</label>
-            <select th:field="*{location}">
+            <select class="form-control" th:field="*{location}">
                 <option th:each="location : *{locations}"
                         th:value="${location}"
                         th:text="${location}"></option>
@@ -36,7 +36,7 @@
 
         <div class="form-group">
             <label th:for="coreCompetency">Skill</label>
-            <select th:field="*{coreCompetency}">
+            <select class="form-control" th:field="*{coreCompetency}">
                 <option th:each="coreCompetency : *{coreCompetencies}"
                         th:value="${coreCompetency}"
                         th:text="${coreCompetency}"></option>
@@ -45,7 +45,7 @@
 
         <div class="form-group">
             <label th:for="positionType">Position Type</label>
-            <select th:field="*{positionType}">
+            <select class="form-control" th:field="*{positionType}">
                 <option th:each="positionType : *{positionTypes}"
                         th:value="${positionType}"
                         th:text="${positionType}"></option>
